<resources>
    <string name="app_name">NightLifeApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //Login and Sign Up Strings
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="temporary">Temporal Stuff Like Slider or company info</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_activity_home_screen">MainActivityHomeScreen</string>

    //End of Login/Sign Up


</resources>
