<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.boum_ivan.nightlifeapp.SignUp">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="*"
        android:padding="10dp">

        <TableRow
            android:layout_weight="0.1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:hint="@string/firstName"/>
        </TableRow>

        <TableRow
            android:layout_weight="0.1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:hint="@string/lastName"/>
        </TableRow>

        <TableRow
            android:layout_weight="0.1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:hint="@string/email"/>
        </TableRow>

        <TableRow
            android:layout_weight="0.1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:hint="@string/password"/>
        </TableRow>

        <TableRow
            android:layout_weight="0.1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:hint="@string/confirmPassword"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:layout_marginTop="5dp">
            <Button
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/signup"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.8">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </TableRow>

    </TableLayout>


</RelativeLayout>
