<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.boum_ivan.nightlifeapp.Login">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="*"
        android:padding="10dp">
        <TableRow
            android:layout_weight="0.1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:hint="@string/username"/>
        </TableRow>

        <TableRow
            android:layout_weight="0.1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:hint="@string/password"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            android:layout_marginTop="5dp">

            <Button
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/login"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        </TableRow>

    </TableLayout>


</RelativeLayout>
